feat: updated README.md file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,11 @@ services:
   rabbitmq:
     image: "rabbitmq:3-management"
     environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
     ports:
       - "15672:15672"
       - "5672:5672"
-
-  redis:
-    image: "redis:alpine"
 
   celery_worker:
     build: .
@@ -31,7 +28,7 @@ services:
     build: .
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     volumes:
-      - /var/log:/var/log # Mount host's /var/log directory to container's /var/log for logging
+      - /var/log:/var/log
       - .:/app
     depends_on:
       - rabbitmq
@@ -55,9 +52,9 @@ services:
   ngrok:
     image: wernight/ngrok
     ports:
-      - "4040:4040" # Ngrok web interface port
+      - "4040:4040"
     environment:
-      NGROK_AUTHTOKEN: ${NGROK_AUTHTOKEN} # Use ngrok authentication token from .env file
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
     command: ["ngrok", "http", "web:8000"]
     depends_on:
       - web
